keycloak-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
  labels:
    app: keycloak-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-db
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      containers:
        - name: keycloak-db
          image: postgres:12.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: keycloak-db
      volumes:
        - name: keycloak-db
          persistentVolumeClaim:
            claimName: keycloak-db-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
  labels:
    app: keycloak-db
spec:
  type: LoadBalancer
  ports:
   - port: 5432
  selector:
   app: keycloak-db
