kong-bootstrap.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-backend
  annotations:
    plugins.konghq.com: kong-backend-oidc
spec:
  rules:
  - http:
      paths:
      - path: /graphql
        backend:
          serviceName: corphub-backend-service
          servicePort: 8082   
      - path: /search
        backend:
          serviceName: elasticsearch-service
          servicePort: 9200   
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-frontend
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: corphub-frontend-service
          servicePort: 5000
